refactor: Rename project to Kitchen Guard and simplify AI
The project has been renamed from "Overstock Guard" to "Kitchen Guard" to better reflect its function.

The Gemini AI integration, which was not fully utilized after the removal of barcode scanning, has been removed. This simplifies the codebase and reduces external dependencies. The `GeminiService` is now a placeholder, and related dependencies in `package.json` and `index.html` have been removed.

Minor UI and UX improvements have also been made, including updated empty state messages and a confirmation dialog for deleting items.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "overstock-guard---minimalist-inventory",
+  "name": "kitchen-guard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,6 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
     "@heroicons/react": "^2.2.0",
     "idb-keyval": "6.2.1"
   },
