refactor: Update dependencies and PWA meta tags
Updates React to v19.0.0 and adds `lucide-react`. Refactors PWA meta tags and external script includes in `index.html`. Updates service worker caching strategy and cache name. Consolidates entry point to `index.html` and introduces new `App.js` and `db.js` files for core application logic and database operations. Introduces `types.js` and `statusUtils.js` for data structures and status calculations.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
+    "react": "19.0.0",
+    "lucide-react": "0.454.0",
     "idb-keyval": "6.2.1",
     "react-dom": "^19.2.3",
     "@heroicons/react": "^2.2.0"
