refactor: Update app name and UI elements
This commit rebrands the application from "Kitchen Guard" to "Overstock Guard". It updates various UI elements, including titles and headings, to reflect the new name. Additionally, it removes unused Google API imports from the main HTML file and introduces a subtle fade-in animation for elements for improved user experience.

The `types.ts` file includes a new `SyncStatus` enum, and `db.ts` is refactored to use a dedicated key for `clientId` and removes an unused `config` key.

Minor enhancements are made to `InventoryView` and `ShoppingListView` for better usability and visual feedback.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 
 {
-  "name": "Kitchen Guard Inventory",
-  "short_name": "KitchenGuard",
+  "name": "Overstock Guard",
+  "short_name": "OverstockGuard",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
