feat: Use local asset for app icon
Updates the `manifest.json` to reference the locally stored `overstock_guard.png` as the application icon, replacing the CDN URL. This ensures the icon is available offline and improves application loading performance.

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/5110/5110688.png",
+      "src": "overstock_guard.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
