--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "overstock_guard.png",
+      "src": "overstock_512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
